[tool.poetry]
name = "apispec-webargs"
version = "0.1.0"
description = ""
authors = ["maz808 <mzamora808@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
apispec = {extras = ["marshmallow", "yaml"], version = "^5.1.1"}
webargs = "^8.1.0"
python-dotenv = "^0.19.2"
apispec-webframeworks = "^0.5.2"
attrs = "^21.4.0"
cattrs = "^1.10.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
Flask-Cors = "^3.0.10"
Flask = "^2.0.3"
pytest-mock = "^3.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
