[tool.poetry]
name = "specargs"
version = "0.1.0"
description = "A library for request and response parsing and serialization and OpenAPI Specification file generation"
authors = ["maz808 <mzamora808@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
apispec = {extras = ["marshmallow", "yaml"], version = "^5.1.1"}
webargs = "^8.1.0"
python-dotenv = "^0.19.2"
apispec-webframeworks = "^0.5.2"
attrs = "^21.4.0"
cattrs = "^1.10.0"

Sphinx = {version = "^4.4.0", optional = true}
sphinx-book-theme = {version = "^0.2.0", optional = true}
Flask = {version = "^2.0.3", optional = true}
Flask-Cors = {version = "^3.0.10", optional = true}
Django = {version = "^4.0.3", optional = true}

[tool.poetry.extras]
docs = ["Sphinx", "sphinx-book-theme"]
flask = ["Flask", "Flask-Cors"]
django = ["Django"]

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-mock = "^3.7.0"
rstcheck = "^3.3.1"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
